feat: general chart updates + plugin updates
